chore: hypercube endpoint in v4
