# api/v4Internal/openapi.yaml
@@ -360,6 +360,22 @@ paths:
                         application/json:
                             schema:
                                 type: object
+    /players/{playerId}/hypercube:
+        get:
+            operationId: getPlayerHypercube
+            parameters:
+                - name: playerId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: Successful response
+                    content:
+                        application/json:
+                            schema:
+                                type: object
     /players/{playerId}/map-slots:
         get:
             operationId: getMapPlayerSlots
